# plasmolauncher-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts  router.ts  style.css
src-tauri/: Cargo.toml  LauncherConfig.toml  tauri.conf.json
src-tauri/bindings/: JavaPreferences.ts  MemoryAllocation.ts  NamedProgress.ts  OfflineSession.ts  PlasmoSession.ts  Preferences.ts  Progress.ts  Session.ts  SessionEnum.ts
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  instance.rs  lib.rs  main.rs
src-tauri/src/external_api/: mod.rs
src-tauri/src/external_api/adoptium/: api.rs  error.rs  mod.rs  system_info.rs
src-tauri/src/external_api/fabric/: cached_file.rs  get_path_and_url_from_maven_name.rs  mod.rs
src-tauri/src/external_api/fabric/models/: launcher_meta.rs  libraries.rs  loader_meta.rs  mod.rs
src-tauri/src/external_api/metaserver/: meta_instance.rs  mod.rs
src-tauri/src/external_api/mojang/: cached_file.rs  mod.rs
src-tauri/src/external_api/mojang/models/: asset_index.rs  mod.rs  version_manifest.rs  version_meta.rs
src-tauri/src/external_api/mojang/models/general/: mod.rs  string_or_string_vec.rs  version_type.rs
src-tauri/src/external_api/mojang/models/version_meta_inner/: argument.rs  artifact.rs  asset_index.rs  downloads.rs  java_version.rs  libraries.rs  logging.rs  mod.rs  rules.rs
src-tauri/src/external_api/plasmo/models/: error.rs  user.rs
src-tauri/src/state/: config.rs  mod.rs  preferences.rs  session.rs
src-tauri/src/task/: downloader.rs  mod.rs  progress.rs  queue.rs  task.rs
src-tauri/src/task/tasks/: cache_meta_instance.rs  cache_session_skin.rs  download_assets.rs  download_java.rs  download_libraries.rs  download_meta.rs  download_meta_instance.rs  launch_game.rs  mod.rs  test.rs
src-tauri/src/utils/: check_path_exists_and_hash_matches.rs  get_response_file_name.rs  hash_from_path.rs  into_future.rs  mod.rs  pathbuf_to_string.rs  read_and_parse_json.rs  string_traits.rs  tauri_block_on.rs  unpack.rs
src-tauri/src/utils/minecraft/: mod.rs  nick_to_offline_uuid.rs  offline_nick_to_skin_name.rs
src-tauri/src/utils/path/: assets.rs  java.rs  launcher.rs  libraries.rs  meta.rs  mod.rs
src/components/common/: Button.vue  IconButton.vue  (+1 more)
src/localization/: index.ts
src/store/: metaInstanceStore.ts  preferencesStore.ts  sessionStore.ts  taskProgressStore.ts
src/utils/: syncSize.ts  useUnlisten.ts
(+18 files in other folders)
